# config/routes.ts
@@ -1,8 +1,0 @@
-import { Routes } from '../src/types';
-
-const routes: Routes =  {
-    root: '/',
-    repositories: '/repositories/:userName',
-};
-
-export default routes;
