# src/controllers/github.ts
@@ -1,18 +1,19 @@
-import { NextFunction, Request, Response } from 'express';
-import { getAllReposPages, getBranchesPromises } from '../utils/repoHelper';
-import { HttpCodes } from '../enums';
+import { RequestHandler } from 'express';
+import { getBranchesPromises } from '../utils/repoHelper';
+import { HttpCodes, VCSEntityType } from '../enums';
 import APIError from '../errors/APIError';
+import GithubAPIService from '../services/GithubAPIService';
 
-const repositoriesController = async (req: Request, res: Response, next: NextFunction) => {
+const repositoriesController: RequestHandler = async (req, res, next) => {
     
-    const { userName, pages } = req.params;
+    const { entityName, entityType = VCSEntityType.users, page } = req.params;
     
-    if(!userName) {
-        return next(new APIError('Missing \'userName\' parameter', HttpCodes.BAD_REQUEST));
+    if(!entityName) {
+        return next(new APIError('Missing \'entityName\' parameter', HttpCodes.BAD_REQUEST));
     }
 
     try {
-        const data = await getAllReposPages(userName, pages);
+        const data = await GithubAPIService.getInstance().getRepositoriesData(entityName, entityType, +page);
         const reposBranchPromises = getBranchesPromises(data);
         const reposWithBranches = await Promise.all(reposBranchPromises);
         res.status(HttpCodes.OK).json(reposWithBranches);
