# src/routes/index.ts
@@ -1,12 +1,11 @@
 import { Router } from 'express';
 import defaultHandler, { repositoriesController } from '../controllers';
-import { routesConfig } from '../../config';
 import { validateRequest } from '../middlewares/validateRequest';
 
 const router: Router = Router();
 
-router.get(routesConfig.root, defaultHandler);
+router.get('/', defaultHandler);
 
-router.get(routesConfig.repositories, validateRequest, repositoriesController);
+router.get('/repositories/:entityType/:entityName', validateRequest, repositoriesController);
 
 export default router;
