# src/types/services.ts
@@ -1,6 +1,12 @@
 import { Branch, Repo } from './data';
 
 export interface IGithubAPIService {
-    getRepositoriesData: (userName: string, page: number) => Promise<Repo[]>
-    getBranchesData: (userName: string, repoName: string) => Promise<Branch[]>
+    getRepositoriesData: (entityName: string, entityType: string, page: number) => Promise<Repo[]>
+    getBranchesData: (entityName: string, repoName: string) => Promise<Branch[]>
 }
+
+export type VCSInputData = {
+    [key: string]: string | number
+}
+
+export type GetUrlFunction = (vscInputData: any) => string
