# swagger.yaml
@@ -28,19 +28,29 @@ paths:
         - url: http://localhost:3000
     servers:
       - url: http://localhost:3000
-  /repositories/{userName}:
+  /repositories/{entityType}/{entityName}:
     get:
       tags:
         - 'Get repositories'
-      description: Gets repositories for specific user
+      description: Gets repositories for specific user / organization
       parameters:
-        - name: userName
+        - name: entityName
           in: path
-          description: github user name
+          description: github user / organization name
           required: true
           example: defunkt
           schema:
             type: string
+        - name: entityType
+          in: path
+          description: github entity type (users / orgs)
+          required: true
+          example: users
+          schema:
+            type: string
+            enum:
+              - users
+              - orgs
         - name: pages
           in: query
           description: amount of pages (each of 100 elements)
@@ -58,13 +68,11 @@ paths:
               - application/json
       responses:
         '200':
-          description: Succesful request, eturns an array of public user repositories
+          description: Succesful request, eturns an array of public user / organization repositories
           content:
             application/json:
               schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Response_200'
-                  - $ref: '#/components/schemas/Response_403'
+                $ref: '#/components/schemas/Response_200'
               examples:
                 sample1:
                   description: Case when branches data available
@@ -80,8 +88,8 @@ paths:
                     login: defunkt
                     name: ace
                     branches:
-                      - status: 403
-                        Message: Forbidden
+                      [ ]
+
         '400':
           description: Request failed because of application/json Accept header is absent
           content:
@@ -89,16 +97,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/Response_400'
               example:
-                status: 406
+                status: 400
                 Message: Missing application/json Accept header
         '404':
-          description: Request failed because of github user not found
+          description: Request failed because of github user / organization not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Response_404'
               example:
-                status: 406
+                status: 404
                 Message: User not found
         '406':
           description: Request failed because of unacceptable application/xml Accept header
@@ -118,6 +126,10 @@ components:
       type: array
       items:
         type: object
+        required:
+          - login
+          - name
+          - branches
         properties:
           login:
             type: string
@@ -138,6 +150,9 @@ components:
                   example: f1b0c0859bb10f557caa18cdd02afda482fc558a
     Response_400:
       type: object
+      required:
+        - status
+        - Message
       properties:
         status:
           type: integer
@@ -145,30 +160,11 @@ components:
         Message:
           type: string
           example: Header missing
-    Response_403:
-      type: array
-      items:
-        type: object
-        properties:
-          login:
-            type: string
-            example: defunkt
-          name:
-            type: string
-            example: ace
-          branches:
-            type: array
-            items:
-              type: object
-              properties:
-                status:
-                  type: number
-                  example: 403
-                Message:
-                  type: string
-                  example: Forbidden
     Response_404:
       type: object
+      required:
+        - status
+        - Message
       properties:
         status:
           type: integer
@@ -178,6 +174,9 @@ components:
           example: User not found
     Response_406:
       type: object
+      required:
+        - status
+        - Message
       properties:
         status:
           type: integer
